Closed Bug 368297 Opened 19 years ago Closed 19 years ago

Fail to find plugins under MOZ_PLUGIN_PATH

Categories

(Core Graveyard :: Plug-ins, defect)

x86
OpenSolaris
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: eagle.lu, Unassigned)

Details

Attachments

(1 file)

Re-produce steps: 1. export MOZ_PLUGIN_PATH=$MOZ_PLUGIN_PATH:/usr/sfw/lib/mozilla/plugins 2. firefox expected result: firefox can find all the plugins under /usr/sfw/lib/mozilla/plugins actual result: firefox can't find those plugins
Attachment #252901 - Flags: review?(benjamin)
The root cause is that MOZ_PLUGIN_PATH is empty before step 1, so the MOZ_PLUGIN_PATH is set to ":/usr/sfw/lib/mozilla/plugin". nsPathsDirectoryEnumerator uses it as a directory name which doesn't exist.
This really belongs in core->plugins
Component: Plugin Finder Service → Plug-ins
Flags: review?(benjamin)
Product: Firefox → Core
QA Contact: plugin.finder → plugins
Attachment #252901 - Flags: review?(brendan)
Comment on attachment 252901 [details] [diff] [review] skip leading PATH_SEPARATORS in the MOZ_PLUGIN_PATH Bouncing to Benjamin, XPCOM owner. /be
Attachment #252901 - Flags: review?(brendan) → review?(benjamin)
Attachment #252901 - Flags: review?(benjamin) → review+
FIXED on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: