Bug 368297 - Fail to find plugins under MOZ_PLUGIN_PATH, patch by Boying Lu <brian.lu@sun.com>, r=me